--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/commmunity.css">
+    <link rel="stylesheet" href="css/community.css">
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
@@ -17,7 +17,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">蛇皮社区</span>
             </button>
-            <a class="navbar-brand" href="#">蛇皮社区</a>
+            <a class="navbar-brand" href="/">蛇皮社区</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
