--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -29,3 +29,32 @@ body{
 .jumbotron{
     margin-left: 40%;
 }
+.media-body{
+    padding-top: 10px;
+}
+.comment{
+    margin: 10px 0;
+}
+.question-sp{
+    margin-top: 0;
+}
+.menu{
+    color:#999 ;
+    margin-top: 5px;
+}
+.menu .icon{
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .icon:hover{
+    color: #499ef3;
+}
+.comment{
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+.question-title{
+    margin-top: 25px;
+}
