--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -2,54 +2,113 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${question.title}"></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="navigation::nav"></div>
 <div class="container-fluid main profile">
     <div class="row">
+        <!--左边主要内容-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h4><span th:text="${question.title}"></span></h4>
-            <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999;">
+            <!--正文-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4 class="question-title"><span th:text="${question.title}"></span></h4>
+                <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999;">
                     作者：<span th:text="${question.user.name}"></span>|
-                    发布时间：<span th:text="${#dates.format(question.getGmtCreate())}"></span>|
+                    发布时间：<span th:text="${#dates.format(question.getGmtCreate(),'yyyy-MM-dd')}"></span>|
                 阅读数：<span th:text="${question.viewCount}"></span>
                     </span>
-            <hr>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user != null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
+                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                   th:if="${session.user != null && session.user.id == question.creator}">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    编辑
                 </a>
-
-        </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            </div>
+            <!--回复列表 -->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-               <h4>发起人</h4>
-                <div class="media" >
-                    <div class="media-left">
-                        <a href="#">
-                            <img class="media-object img-circle"  th:src="${question.user.avatarUrl}" width="38px" >
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <h5 class="media-heading" >
-                            <span th:text="${question.user.name}"></span>
-                        </h5>
+                <h4>
+                    <span th:text="${question.commentCount}"></span>个回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 question-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment" th:each="comment: ${comments}">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded" th:src="${comment.user.avatarUrl}" width="38px">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h5 class="media-heading">
+                                <span th:text="${comment.user.name}"></span>
+                            </h5>
+                            <div th:text="${comment.content}"></div>
+                            <div class="menu">
+                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                                <span class="glyphicon glyphicon-comment icon"></span>
+                                <span class="pull-right"
+                                      th:text="${#dates.format(comment.getGmtCreate(),'yyyy-MM-dd')}"></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-        </div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>相关问题</h4>
+<!--                回复框-->
+                <h4>提交回复</h4>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
 
+                        <div class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object img-rounded" th:src="${question.user.avatarUrl}"
+                                         width="38px">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h5 class="media-heading">
+                                    <span th:text="${question.user.name}"></span>
+                                </h5>
+                            </div>
+                        </div>
+                        <input type="hidden" id="question_id" th:value="${question.id}">
+                        <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                        <button type="button" class="btn btn-success btn-publish" onclick="post()">回复</button>
+                    </div>
+                </div>
             </div>
+
+            <!--右边信息-->
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h4>发起人</h4>
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded" th:src="${question.user.avatarUrl}" width="38px">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h5 class="media-heading">
+                                <span th:text="${question.user.name}"></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+
+
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h4>相关问题</h4>
+
+                </div>
             </div>
         </div>
     </div>
