--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -91,5 +91,7 @@ body{
 }
 
 .publish-tag-tab .label-info{
-    margin-right: 10px;
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
 }
