--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -26,8 +26,12 @@
                     <h4 class="media-heading" th:text="${question.title}"></h4>
 
                     <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999;"><span th:text="${question.commentCount}"></span> 个回复· <span th:text="${question.viewCount}"></span> 次浏览·
-                    <span th:text="${#dates.format(question.getGmtCreate())}"></span>
+                    <span th:text="${#dates.format(question.getGmtCreate(),'yyyy-MM-dd')}"></span>
                     </span>
+                    <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                       th:if="${session.user != null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
                 </div>
             </div>
             <nav aria-label="Page navigation">
