--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -26,8 +26,7 @@
             <p th:text="${message}">裂开</p>
             <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页</a></p>
         </div>
-
-
+<div th:insert="footer::foot"></div>
 </body>
 </html>
 </html>
