--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -38,7 +38,7 @@
                 </div>
                 <script type="text/javascript">
                     $(function() {
-                        var testView = editormd.markdownToHTML("question-view", {});
+                         editormd.markdownToHTML("question-view", {});
                     });
                 </script>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -105,13 +105,13 @@
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object img-rounded" th:src="${question.user.avatarUrl}"
+                                <img class="media-object img-rounded" th:src="${session.user!=null ? session.user.avatarUrl:'/images/default.png'}"
                                      width="38px">
                             </a>
                         </div>
                         <div class="media-body">
                             <h5 class="media-heading">
-                                <span th:text="${question.user.name}"></span>
+                                <span th:text="${session.user!=null ? session.user.name:'匿名用户'}"></span>
                             </h5>
                         </div>
                     </div>
@@ -154,6 +154,7 @@
     </div>
 </div>
 </div>
+<div th:insert="footer::foot"></div>
 
 </body>
 </html>
